// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factsReducer should handle all defined error types: rejected types ADD_FACTS 1`] = `
{
  "result": {
    "update": {
      "error": true,
      "errorMessage": "ERROR",
      "facts": {},
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_FACTS_REJECTED",
}
`;

exports[`factsReducer should handle all defined fulfilled types: fulfilled types ADD_FACTS 1`] = `
{
  "result": {
    "update": {
      "error": false,
      "errorMessage": "",
      "facts": {
        "test": "success",
      },
      "fulfilled": true,
      "pending": false,
    },
  },
  "type": "ADD_FACTS_FULFILLED",
}
`;

exports[`factsReducer should handle all defined pending types: pending types ADD_FACTS 1`] = `
{
  "result": {
    "update": {
      "error": false,
      "errorMessage": "",
      "facts": {},
      "fulfilled": false,
      "pending": true,
    },
  },
  "type": "ADD_FACTS_PENDING",
}
`;
